# raytracer

./: CMakeLists.txt  README.md
include/: scene.h  shader.h  window.h
shaders/: fquad.glsl  quad.vert  raytracer.comp  raytracer.glsl  raytracer1.glsl  raytracer2.glsl  raytracer_old.glsl
src/: main.c  scene.c  shader.c  window.c
